<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">کمدا</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="crop__saving">در حال ذخیره سازی</string>
    <string name="crop__wait">لطفاً صبر کنید ...</string>
    <string name="crop__pick_error">تصویری در دسترس نیست</string>
    <string name="crop__done">تأیید</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">انصراف</string>
    <string name="taptarget.menu.messages.text">اگه کسی برات نظر یا سوالی ارسال کنه، از اینجا با خبر میشی</string>
    <string name="taptarget.view.fab.options"> چیزی برای فروش داری؟ توی کمدت چیزی کم داری که می خوای بقیه برات بفرستن؟ از این دکمه استفاده کن.</string>
    <string name="taptarget.menu.toggle.title">این منوی اصلی کمداست!</string>
    <string name="taptarget.menu.toggle.text">مدیریت آیتم ها، درخواست ها و با خبر شدن از رویدادهای کمدا جاش اینجاست.</string>
    <string name="achievement.unread_messages.title">پیام جدید</string>
    <string name="achievement.unread.messages.text">شما %d پیام خوانده نشده دارید.</string>
    <string name="dialog_search_no_content">متاسفانه هیچ موردی که مناسب این درخواست باشه، نداری!</string>
    <string name="loadin_please_wait">لطفا منتظر باش...</string>
    <string name="taptarget_toolbar_item_search">اگر می‌خوای فقط آیتم های یه شهر و دسته ی خاصی رو ببینی روی این آیکن بزن</string>
    <string name="my_closet">کمدِ من</string>
    <string name="top_sellers">خوش خرید/فروش ها</string>
    <string name="financial_report">گزارش مالی</string>
    <string name="request_item">درخواست آیتم</string>
    <string name="radiomoda">رادیومُدا</string>
    <string name="contact_us">تماس با ما</string>
    <string name="about">درباره کمدا</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://komodaa.com\",\n  }\n}]</string>
    <string name="faq">بقیه چی پرسیدن</string>
    <string name="nav_rules">رسم و رسوم</string>
    <string name="taptarget_bn_komod_text">از اینجا آیتم هایی که می خوای بفروشی و خریدی رو می بینی.</string>
    <string name="taptarget_bn_komod_title">کمد من</string>
</resources>